<resources>
    <string name="app_name">JewelleryStore</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resViewCartDetailsBtn">View Cart Details</string>
    <string name="ResSignOutCartBtn">Sign Out</string>
    <string name="ResFooterCart">Yusra Ismail-Michael Jansen-Braedy Thebus</string>
    <string name="ResTxtUsername">username</string>
    <string name="ResTxtPassword">password</string>
    <string name="ResSignInBtn">Sign In</string>
    <string name="ResExitBtn">Exit</string>
    <string name="ResTemp">Add To Cart</string>
    <string name="ResBtnAddItem">Add New Item</string>
    <string name="ResBtnCancelItem">Cancel</string>
    <string name="ResBtnSaveItem">Save</string>
    <string name="ResLblItemID">Item ID</string>
    <string name="ResLblItemName">Item Name</string>
    <string name="ResLblItemDesc">Item Description</string>
    <string name="ResLblItemPrice">Item Price</string>
    <string name="ResLblItemQuantity">Quantity</string>
    <string name="ResLogo">logo</string>
    <string name="ResBtnEditItem">Edit Item</string>
    <string name="title_activity_blank">blankActivity</string>
    <string name="ResMenuEdit">Edit</string>
    <string name="ResMenuDelete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="ReslblMainMenu">Main Menu</string>
    <string name="ResBtnMenuItem">Item</string>
    <string name="ResBtnMenuEmployee">Employee/User</string>
    <string name="ResBtnMenuCustomer">Customer</string>
    <string name="ResBtnBackItems">Back</string>
    <string name="title_activity_customer">Customer</string>
    <string name="title_activity_customer_details">Customer Details</string>
    <string name="ResTxtSearchCustomer">Search by Name/Surname/Company</string>
    <string name="ResBtnCloseCustomerDetails">Close</string>
    <string name="ResLblCustomerName">Name</string>
    <string name="ResLblCustomerCompany">Company Name</string>
    <string name="ResLblCustomerEmail">E-mail</string>
    <string name="ResLblCustomerTel">Telephone Number</string>
    <string name="ResLblCustomerCell">Cellphone</string>
    <string name="ResLblCustomerAddress">Address</string>
    <string name="ResCustomerDetails">View Details</string>
    <string name="view_customer_details">View Details</string>
    <string name="ResBtnMenuOrders">Orders</string>
    <string name="title_activity_orders">Orders</string>
    <string name="ResBtnCloseOrderList">Close</string>
    <string name="title_activity_employee__list">Employee List</string>
    <string name="title_activity_employee">Employee</string>
    <string name="ResBtnAddNewEmployee">Add New Employee</string>
    <string name="ResBtnBackEmployee">Back</string>
    <string name="ResLogoEmployee">logo</string>
    <string name="title_activity_order__details">Order Details</string>
    <string name="ResLblOrderID">Order ID:</string>
    <string name="ResLblOrderCustomer">Customer:</string>
    <string name="ResBtnCloseOrderDetails">close</string>
</resources>
