<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jewellerystore.com.example.jewellerystore.View.Employee_List"
    android:id="@+id/relLayoutViewEmployees">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/ResLogoEmployee" />


    <LinearLayout
        android:id="@+id/linearHeading"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/headingName"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:text="Name"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="17dp"
            />
        <TextView
            android:id="@+id/headingUsername"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:text="Username"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResFooterCart"
        android:id="@+id/lblFooter"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResBtnAddNewEmployee"
        android:id="@+id/btnAddEmployee"
        android:layout_above="@+id/lblFooter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResBtnBackEmployee"
        android:id="@+id/btnBackEmployee"
        android:layout_above="@+id/lblFooter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_below="@+id/linearHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnAddEmployee" />

</RelativeLayout>
