<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jewellerystore.com.example.jewellerystore.View.CustomerDetails">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:id="@+id/imageView6"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResBtnCloseCustomerDetails"
        android:id="@+id/btnCloseCustomerDetails"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerName"
        android:id="@+id/lblCustomerName"
        android:layout_below="@+id/imageView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/txtCustomerName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView6"
        android:layout_alignLeft="@+id/btnCloseCustomerDetails"
        android:layout_alignStart="@+id/btnCloseCustomerDetails"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerCompany"
        android:id="@+id/lblCompanyName"
        android:layout_below="@+id/lblCustomerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/txtCustomerCompany"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/lblCompanyName"
        android:layout_alignLeft="@+id/txtCustomerName"
        android:layout_alignStart="@+id/txtCustomerName"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerEmail"
        android:id="@+id/lblCustomerEmail"
        android:layout_below="@+id/lblCompanyName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/txtCustomerEmail"
        android:layout_alignLeft="@+id/txtCustomerCompany"
        android:layout_alignStart="@+id/txtCustomerCompany"
        android:layout_below="@+id/txtCustomerCompany"
        android:layout_alignRight="@+id/txtCustomerCompany"
        android:layout_alignEnd="@+id/txtCustomerCompany"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerTel"
        android:id="@+id/lblCustomerTelephone"
        android:layout_below="@+id/lblCustomerEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/txtCustomerTel"
        android:layout_alignLeft="@+id/txtCustomerEmail"
        android:layout_alignStart="@+id/txtCustomerEmail"
        android:layout_alignTop="@+id/lblCustomerTelephone"
        android:layout_alignRight="@+id/txtCustomerEmail"
        android:layout_alignEnd="@+id/txtCustomerEmail"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerCell"
        android:id="@+id/lblCustomerCell"
        android:layout_below="@+id/lblCustomerTelephone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/txtCustomerCell"
        android:layout_below="@+id/txtCustomerTel"
        android:layout_alignLeft="@+id/txtCustomerTel"
        android:layout_alignStart="@+id/txtCustomerTel"
        android:layout_alignRight="@+id/txtCustomerTel"
        android:layout_alignEnd="@+id/txtCustomerTel"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ResLblCustomerAddress"
        android:id="@+id/lblAddress"
        android:layout_below="@+id/lblCustomerCell"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/txtAddress"
        android:layout_alignLeft="@+id/txtCustomerCell"
        android:layout_alignStart="@+id/txtCustomerCell"
        android:layout_alignTop="@+id/lblAddress"
        android:layout_alignRight="@+id/txtCustomerTel"
        android:layout_alignEnd="@+id/txtCustomerTel"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>
